--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:33067/northwind?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/northwind?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=supersecret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
